# mod_websocket

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGES  COPYING  INSTALL  Makefile.am  README  README.md  TODO  alltest.sh  bootstrap  configure.ac  dopatch.sh  makepatch.sh  makesample.sh  mod_websocket.patch  travis.sh
html/: ws_chat.html  ws_echo_ruby.html
m4/: Makefile.rules
patches/lighttpd-1.4.28/: lighttpd-1.4.28.new_configure.ac.patch  lighttpd-1.4.28.new_src_Makefile.am.patch  lighttpd-1.4.28.new_src_base.h.patch  lighttpd-1.4.28.new_src_connections-glue.c.patch  lighttpd-1.4.28.new_src_connections.c.patch  lighttpd-1.4.28.new_src_plugin.c.patch  lighttpd-1.4.28.new_src_plugin.h.patch  websocket.patch
patches/lighttpd-1.4.29/: lighttpd-1.4.29.new_configure.ac.patch  lighttpd-1.4.29.new_src_Makefile.am.patch  lighttpd-1.4.29.new_src_base.h.patch  lighttpd-1.4.29.new_src_connections-glue.c.patch  lighttpd-1.4.29.new_src_connections.c.patch  lighttpd-1.4.29.new_src_plugin.c.patch  lighttpd-1.4.29.new_src_plugin.h.patch  websocket.patch
patches/lighttpd-1.4.30/: lighttpd-1.4.30.new_configure.ac.patch  lighttpd-1.4.30.new_src_Makefile.am.patch  lighttpd-1.4.30.new_src_base.h.patch  lighttpd-1.4.30.new_src_connections-glue.c.patch  lighttpd-1.4.30.new_src_connections.c.patch  lighttpd-1.4.30.new_src_plugin.c.patch  lighttpd-1.4.30.new_src_plugin.h.patch  websocket.patch
patches/lighttpd-1.4.31/: lighttpd-1.4.31.new_configure.ac.patch  lighttpd-1.4.31.new_src_Makefile.am.patch  lighttpd-1.4.31.new_src_base.h.patch  lighttpd-1.4.31.new_src_connections-glue.c.patch  lighttpd-1.4.31.new_src_connections.c.patch  lighttpd-1.4.31.new_src_plugin.c.patch  lighttpd-1.4.31.new_src_plugin.h.patch  websocket.patch
patches/lighttpd-1.4.32/: lighttpd-1.4.32.new_configure.ac.patch  lighttpd-1.4.32.new_src_Makefile.am.patch  lighttpd-1.4.32.new_src_base.h.patch  lighttpd-1.4.32.new_src_connections-glue.c.patch  lighttpd-1.4.32.new_src_connections.c.patch  lighttpd-1.4.32.new_src_plugin.c.patch  lighttpd-1.4.32.new_src_plugin.h.patch  websocket.patch
patches/lighttpd-1.4.33/: websocket.patch
patches/tentative/: lighttpd-1.4.39.patch
sample/etc/: lighttpd.conf.in  modules.conf
sample/etc/certs/: lighttpd.pem
sample/etc/conf.d/: websocket.conf  websocket.conf.sample
sample/var/www/: index.html
src/: .gitattributes  Makefile.am  base64.c  base64.h  mod_websocket.c  mod_websocket.h  mod_websocket.patch  mod_websocket_base64.c  mod_websocket_base64.h  mod_websocket_config.h  mod_websocket_connector.c  mod_websocket_connector.h  mod_websocket_conv.c  mod_websocket_conv.h  mod_websocket_frame.c  mod_websocket_frame.h  mod_websocket_handshake.c  mod_websocket_handshake.h  mod_websocket_new.h  mod_websocket_sha1.c  mod_websocket_sha1.h  mod_websocket_socket.c  mod_websocket_socket.h  mod_websocket_types.h  mw_sha1.c  mw_sha1.h  parser.y  scanner.l  sha1.c  sha1.h
src/sample/: Makefile  echo_server.php  ws_chat.c  ws_echo.c  ws_echo.rb
src/samples/: Makefile.am  README
src/samples/chat/: Makefile.am
src/samples/chat/html/: chat.html
src/samples/chat/src/: Makefile.am  chat.c
src/samples/conf/: websocket.conf
src/samples/netstat/html/: netstat.html
src/samples/netstat/src/: netstat.sh  netstat_impl.sh
src/samples/smtp/html/: smtp.html  smtp.js
src/tests/: Makefile.am  base64_decode_test.c  base64_encode_test.c  base64_test.c  base64_test.sh  hello.txt  hello2.txt  mod_websocket_config_test.c  mod_websocket_connector_test.c  mod_websocket_conv_test.c  mod_websocket_frame_test.c  mod_websocket_handshake_test.c  sha1_test.c  test.conf
stub/: Makefile.am  base.h  chunk.h  log.c  log.h  plugin.h  settings.h
supplement/config_parser/: Makefile.am  bootstrap  configure.ac
supplement/config_parser/src/: Makefile.am  mod_websocket_config.h  mod_websocket_config_parser.y  mod_websocket_config_scanner.l  mod_websocket_config_validator.c
supplement/config_parser/test/: Makefile.am  mod_websocket_config_parser_test.cpp  test.conf
test/: Makefile.am  base64.pl  hello3.txt  mod_websocket_base64_decode_test.c  mod_websocket_base64_encode_test.c  mod_websocket_base64_test.sh  mod_websocket_frame_test.cpp  mod_websocket_handshake_test.cpp  mod_websocket_sha1_test.cpp
test/stub/: Makefile.am  array.h  base.h  buffer.h  log.c  log.h  md5.h  plugin.h
