## $Id$

INCLUDES = \
        -I/usr/local/include/ \
        -I/opt/local/include/ \
        -I.

LDADD = \
        -L/usr/local/lib \
        -L/opt/local/lib \
        -lev

CFLAGS = -Wall -g

noinst_PROGRAMS = \
	ws_chat

ws_chat_SOURCES = \
        ws_chat.c

include $(top_srcdir)/config/Makefile.rules

## EOF
