## $Id$

INCLUDES = \
        -I/usr/local/include/ \
        -I/opt/local/include/ \
        -I.

LDADD = \
        -L/usr/local/lib \
        -L/opt/local/lib \
        -lev

CFLAGS = -Wall -g

noinst_PROGRAMS = \
	chat

chat_SOURCES = \
        chat.c

include $(top_srcdir)/m4/Makefile.rules

## EOF
